@@ -1,5 +1,15 @@
 2018-04-18  Ross Kirsling  <ross.kirsling@sony.com>
 
+        [WinCairo][EWS] Build bot should clean user temp directory each time.
+        https://bugs.webkit.org/show_bug.cgi?id=184761
+
+        Reviewed by Lucas Forschler.
+
+        * EWSTools/Start-Queue.ps1:
+        Clean user's temp directory before each build, so that Windows git doesn't fill it up over time.
+
+2018-04-18  Ross Kirsling  <ross.kirsling@sony.com>
+
         Buildbots using Python zipfile should enable compression
         https://bugs.webkit.org/show_bug.cgi?id=184759
 
